# guess-the-watermark

./: .gitignore  README.md  requirements.txt  setup.cfg
apps/: watermark_evaluation.py
