[metadata]
name = sticky
version = 0.1.0
description = "Getting sticky"
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
author = Donato Crisostomi
author_email = donatocrisostomi@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
# install_requires =

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md
